@@ -13,115 +13,119 @@ Format of timeslots.xml
 	</timeslot>
 </timeslots>
 -->
+<?xml version="1.0" encoding="UTF-8"?>
 
-<timeslots>
-	<timeslot start="0830" end="1020">
-		<booking>
-			<day weekday="TUE">Tuesday</day>
-			<courseCode>4620</courseCode>
-			<courseType>Lab</courseType>
-			<room>SE12-306</room>
-			<instructor>Bethany Edmunds</instructor>
-		</booking>
-		<booking>
-			<day weekday="FRI">Friday</day>
-			<courseCode>4660</courseCode>
-			<courseType>Lec</courseType>
-			<room>SW9-206</room>
-			<instructor>Steve Fabiszewski</instructor>
-		</booking>
-	</timeslot>
-	<timeslot start="0930" end="1020">
-		<booking>
-			<day weekday="THU">Thursday</day>
-			<courseCode>4910</courseCode>
-			<courseType>Lec</courseType>
-			<room>SW1-1205</room>
-			<instructor>Richard Chau</instructor>
-		</booking>
-	</timeslot>
-	<timeslot start="1030" end="1220">
-		<booking>
-			<day weekday="MON">Monday</day>
-			<courseCode>4650</courseCode>
-			<courseType>Lab</courseType>
-			<room>SE12-306</room>
-			<instructor>Medhat Elmasry</instructor>
-		</booking>
-		<booking>
-			<day weekday="TUE">Tuesday</day>
-			<courseCode>4910</courseCode>
-			<courseType>Lab</courseType>
-			<room>SE12-306</room>
-			<instructor>Richard Chau</instructor>
-		</booking>
-		<booking>
-			<day weekday="FRI">Friday</day>
-			<courseCode>4770</courseCode>
-			<courseType>Lab</courseType>
-			<room>SE12-306</room>
-			<instructor>Trevor Lord</instructor>
-		</booking>
-	</timeslot>
-	<timeslot start="1230" end="1320">
-		<booking>
-			<day weekday="TUE">Tuesday</day>
-			<courseCode>4650</courseCode>
-			<courseType>Lec</courseType>
-			<room>SE6-205</room>
-			<instructor>Medhat Elmasry</instructor>
-		</booking>
-	</timeslot>
-	<timeslot start="1230" end="1420">
-		<booking>
-			<day weekday="WED">Wednesday</day>
-			<courseCode>4850</courseCode>
-			<courseType>Lec</courseType>
-			<room>SE6-207</room>
-			<instructor>James Parry</instructor>
-		</booking>
-	</timeslot>
-	<timeslot start="1330" end="1520">
-		<booking>
-			<day weekday="THU">Thursday</day>
-			<courseCode>4850</courseCode>
-			<courseType>Lab</courseType>
-			<room>SE12-308</room>
-			<instructor>James Parry</instructor>
-		</booking>
-		<booking>
-			<day weekday="FRI">Friday</day>
-			<courseCode>4660</courseCode>
-			<courseType>Lab</courseType>
-			<room>SE12-206</room>
-			<instructor>Steve Fabiszewski</instructor>
-		</booking>
-	</timeslot>
-	<timeslot start="1530" end="1620">
-		<booking>
-			<day weekday="MON">Monday</day>
-			<courseCode>4910</courseCode>
-			<courseType>Lec</courseType>
-			<room>SW1-2005</room>
-			<instructor>Richard Chau</instructor>
-		</booking>
-	</timeslot>
-	<timeslot start="1630" end="1720">
-		<booking>
-			<day weekday="MON">Monday</day>
-			<courseCode>4650</courseCode>
-			<courseType>Lec</courseType>
-			<room>SE6-205</room>
-			<instructor>Medhat Elmasry</instructor>
-		</booking>
-	</timeslot>
-	<timeslot start="1530" end="1720">
-		<booking>
-			<day weekday="TUE">Tuesday</day>
-			<courseCode>4620</courseCode>
-			<courseType>Lec</courseType>
-			<room>SW1-2020</room>
-			<instructor>Bethany Edmunds</instructor>
-		</booking>
-	</timeslot>
-</timeslots>
+<?xml-stylesheet type="text/xsl" href="timeslots.xsl"?>
+<timetable>
+	<timeslots>
+		<timeslot start="08:30" end="10:20">
+			<booking>
+				<day weekday="Tuesday"></day>
+				<courseCode>4620</courseCode>
+				<courseType>Lab</courseType>
+				<room>SE12-306</room>
+				<instructor>Bethany Edmunds</instructor>
+			</booking>
+			<booking>
+				<day weekday="Friday"></day>
+				<courseCode>4660</courseCode>
+				<courseType>Lec</courseType>
+				<room>SW9-206</room>
+				<instructor>Steve Fabiszewski</instructor>
+			</booking>
+		</timeslot>
+		<timeslot start="09:30" end="10:20">
+			<booking>
+				<day weekday="Thursday"></day>
+				<courseCode>4910</courseCode>
+				<courseType>Lec</courseType>
+				<room>SW1-1205</room>
+				<instructor>Richard Chau</instructor>
+			</booking>
+		</timeslot>
+		<timeslot start="10:30" end="12:20">
+			<booking>
+				<day weekday="Monday"></day>
+				<courseCode>4650</courseCode>
+				<courseType>Lab</courseType>
+				<room>SE12-306</room>
+				<instructor>Medhat Elmasry</instructor>
+			</booking>
+			<booking>
+				<day weekday="Tuesday"></day>
+				<courseCode>4910</courseCode>
+				<courseType>Lab</courseType>
+				<room>SE12-306</room>
+				<instructor>Richard Chau</instructor>
+			</booking>
+			<booking>
+				<day weekday="Friday"></day>
+				<courseCode>4770</courseCode>
+				<courseType>Lab</courseType>
+				<room>SE12-306</room>
+				<instructor>Trevor Lord</instructor>
+			</booking>
+		</timeslot>
+		<timeslot start="12:30" end="13:20">
+			<booking>
+				<day weekday="Tuesday"></day>
+				<courseCode>4650</courseCode>
+				<courseType>Lec</courseType>
+				<room>SE6-205</room>
+				<instructor>Medhat Elmasry</instructor>
+			</booking>
+		</timeslot>
+		<timeslot start="12:30" end="14:20">
+			<booking>
+				<day weekday="Wednesday"></day>
+				<courseCode>4850</courseCode>
+				<courseType>Lec</courseType>
+				<room>SE6-207</room>
+				<instructor>James Parry</instructor>
+			</booking>
+		</timeslot>
+		<timeslot start="13:30" end="15:20">
+			<booking>
+				<day weekday="Thursday"></day>
+				<courseCode>4850</courseCode>
+				<courseType>Lab</courseType>
+				<room>SE12-308</room>
+				<instructor>James Parry</instructor>
+			</booking>
+			<booking>
+				<day weekday="Friday"></day>
+				<courseCode>4660</courseCode>
+				<courseType>Lab</courseType>
+				<room>SE12-206</room>
+				<instructor>Steve Fabiszewski</instructor>
+			</booking>
+		</timeslot>
+		<timeslot start="15:30" end="16:20">
+			<booking>
+				<day weekday="Monday"></day>
+				<courseCode>4910</courseCode>
+				<courseType>Lec</courseType>
+				<room>SW1-2005</room>
+				<instructor>Richard Chau</instructor>
+			</booking>
+		</timeslot>
+		<timeslot start="16:30" end="17:20">
+			<booking>
+				<day weekday="Monday"></day>
+				<courseCode>4650</courseCode>
+				<courseType>Lec</courseType>
+				<room>SE6-205</room>
+				<instructor>Medhat Elmasry</instructor>
+			</booking>
+		</timeslot>
+		<timeslot start="15:30" end="17:20">
+			<booking>
+				<day weekday="Tuesday"></day>
+				<courseCode>4620</courseCode>
+				<courseType>Lec</courseType>
+				<room>SW1-2020</room>
+				<instructor>Bethany Edmunds</instructor>
+			</booking>
+		</timeslot>
+	</timeslots>
+</timetable>
